fix production only issue where timeline dots appear behind timeline line

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -15,6 +15,7 @@ $dot-size: 20px;
     margin-left: 49.5%;
     width: 1%;
     background: $light-gray;
+    z-index: -1;
   }
 
   li {
